# home_web_1

./: AddressBook.py  Dockerfile  SortFunc.py  func.py  pyproject.toml  requirements.txt  Діаграма без назви.drawio
