[tool.poetry]
name = "home-web-1"
version = "0.1.0"
description = ""
authors = ["YaroslavZq <svyatikua2@gmail.com>"]
readme = "README.md"
packages = [{include = "home_web_1"}]

[tool.poetry.dependencies]
python = "^3.10"
levenshtein = "==0.20.8"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
